--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha06"
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.0'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
     implementation "ch.qos.logback:logback-classic:1.2.3"
     implementation "io.ktor:ktor-client-serialization:1.6.2"
@@ -80,7 +81,10 @@ dependencies {
     implementation("io.coil-kt:coil-compose:1.3.2")
     implementation "com.google.accompanist:accompanist-insets:0.16.1"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.16.1"
+    implementation "com.google.accompanist:accompanist-permissions:0.16.1"
+    implementation 'com.karumi:dexter:6.2.3'
     implementation "com.github.hadilq:live-event:1.3.0"
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     implementation "io.insert-koin:koin-core:3.1.2"
     implementation "io.insert-koin:koin-android:3.1.2"
